--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head> 
   <!-- Metadata dokumen --> 
   <meta charset="utf-8" /> 
-  <title>For You</title> 
+  <title>Untuk Erika</title> 
   <meta name="description" content="Happy birthday Erika Sayang" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" /> 
   <!-- Favicon --> 
@@ -405,10 +405,10 @@ footer a {
  
 <body> 
   <!-- Audio latar --> 
-  <audio src="mhbd.mp3" id="linkmp3" class="sembunyi"></audio> 
+  <audio src="hbd.mp3" id="linkmp3" class="sembunyi"></audio> 
   <!-- Overlay loading --> 
   <div class="overlay"> 
-    <div class="loading-message">Hai kamu!<br />Tunggu dulu ya..</div> 
+    <div class="loading-message">Erika Sayang!<br />Tunggu dulu ya..</div> 
     <!-- Tombol Love --> 
     <div id="loveIn" class="blocklove"> 
       <!-- Love icon --> 
@@ -443,7 +443,7 @@ footer a {
           <img src="glg.gif" /> 
         </div> 
         <h1 id="teks1" class="scale0 itim" style="font-size: 20px"> 
-          this is for youuu 🫶<br /> 
+          I Love You Erika 🫶<br /> 
           ⇒ ⇒ ⇒ 
         </h1> 
       </div> 
