--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ footer a {
  
   <!-- Efek blur untuk latar belakang --> 
   <div id="bodyblur"> 
-    <img src="bg.jpg" id="wallpaper" /> 
+    <img src="erika.jpg" id="wallpaper" /> 
   </div> 
  
   <!-- Slider Swiper --> 
@@ -454,7 +454,7 @@ footer a {
           <img src="emh.gif" /> 
         </div> 
         <h1 id="teks2" class="scale0 itim" style="font-size: 19px"> 
-          ciee, whose birthday is today 💞<br /><br /><span style="font-size: 16px; font-weight: 400">swipe & read to the end!</span><br /><br /> 
+          ciee, Ada yang ulang tahun  💞<br /><br /><span style="font-size: 16px; font-weight: 400">swipe & read to the end!</span><br /><br /> 
             ⇒ ⇒ ⇒ 
         </h1> 
       </div> 
