--- a/index.html
+++ b/index.html
@@ -604,3 +604,10 @@ footer a {
  
     const scrollInterval = setInterval(autoScroll, 50); // Menjalankan scroll otomatis setiap 50ms 
   </script>
+ 
+<footer> 
+  <a href="https://himang.my.id">Himang.my.id</a> 
+</footer> 
+</body> 
+ 
+</html>
