--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Metadata dokumen --> 
   <meta charset="utf-8" /> 
   <title>Untuk Erika</title> 
-  <meta name="description" content="Happy birthday Erika Sayang" /> 
+  <meta name="description" content="Happy birthday Cyon sayang" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" /> 
   <!-- Favicon --> 
   <link rel="icon" type="image" href="il.png" /> 
@@ -454,7 +454,7 @@ footer a {
           <img src="emh.gif" /> 
         </div> 
         <h1 id="teks2" class="scale0 itim" style="font-size: 19px"> 
-          ciee, Ada yang ulang tahun  💞<br /><br /><span style="font-size: 16px; font-weight: 400">swipe & read to the end!</span><br /><br /> 
+          Ekhem, Ada yang ulang tahun nih  💞<br /><br /><span style="font-size: 16px; font-weight: 400">swipe & read to the end!</span><br /><br /> 
             ⇒ ⇒ ⇒ 
         </h1> 
       </div> 
@@ -467,7 +467,7 @@ footer a {
         <!-- Konten teks --> 
         <div id="scroll-container" class="blocktext"> 
           <p id="teks3" class="itim" style="font-size: 16px; margin-left: 40px"> 
-            <span class="pink">Hai</span> Selamat ulang tahun Erika Hadinata, Perempuan yang aku
+            <span class="pink">Hai</span> Selamat ulang tahun Halcyon nyebelin, Perempuan yang aku
             cintai di alam semesta ini , <br><br /><b class="putih merah"><i>happy birthday yaaa 💐</i></b><br />semogaa
             dengan bertambahnya usia, kamu selalu bisa menjadi
             yang terbaik dan selalu menjadi lebih baik, panjangg umur sayang, sehat selaluu,
@@ -481,7 +481,7 @@ footer a {
             agar kamu tetap berada dalam lindungan-Nya, intinyaa ttep mnjdi 
             perempuan favoritku ya.<br /><br />sekalilagii happy birthday 
             sayangku, 
-            <i>remain be good person whenever and wherever</i> 🥳💐🫶✨ 
+            <i>dari aku yang mencintaimu xionaze</i> 🥳💐🫶✨ 
           </p> 
         </div> 
       </div> 
