--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ footer a {
           <img src="glg.gif" /> 
         </div> 
         <h1 id="teks1" class="scale0 itim" style="font-size: 20px"> 
-          I Love You Erika 🫶<br /> 
+          BIM SALABIM HEHE 🫶<br /> 
           ⇒ ⇒ ⇒ 
         </h1> 
       </div> 
@@ -454,7 +454,7 @@ footer a {
           <img src="emh.gif" /> 
         </div> 
         <h1 id="teks2" class="scale0 itim" style="font-size: 19px"> 
-          Ekhem, Ada yang ulang tahun nih  💞<br /><br /><span style="font-size: 16px; font-weight: 400">swipe & read to the end!</span><br /><br /> 
+          Ekhem, Ada yang ulang tahun nih💞<br /><br /><span style="font-size: 16px; font-weight: 400">swipe & read to the end!</span><br /><br /> 
             ⇒ ⇒ ⇒ 
         </h1> 
       </div> 
