--- a/index.html
+++ b/index.html
@@ -481,7 +481,8 @@ footer a {
             agar kamu tetap berada dalam lindungan-Nya, intinyaa ttep mnjdi 
             perempuan favoritku ya.<br /><br />sekalilagii happy birthday 
             sayangku, 
-            <i>dari aku yang mencintaimu xionaze</i> 🥳💐🫶✨ 
+            <i>dari aku yang mencintaimu 
+             XIONAZIE</i> 🥳💐🫶✨ 
           </p> 
         </div> 
       </div> 
@@ -606,7 +607,7 @@ footer a {
   </script>
  
 <footer> 
-  <a href="https://himang.my.id">Himang.my.id</a> 
+  <a href="https://www.instagram.com/with.byy?igsh=cjgzNjU2c3FucmU=">Xionazie</a> 
 </footer> 
 </body> 
  
